cabal-version: 3.0

name:                   cardano-tracer
version:                0.5.0
synopsis:               A service for logging and monitoring over Cardano nodes
description:            A service for logging and monitoring over Cardano nodes.
category:               Cardano,
                        Trace,
copyright:              2022-2023 Input Output Global Inc (IOG), 2023-2026 Intersect.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-doc-files:        README.md
                        CHANGELOG.md

flag systemd
  description:          Enable systemd support.
  default:              True
  manual:               True

common project-config
  default-language:     Haskell2010
  build-depends:        base >= 4.14 && < 5

  default-extensions:   BlockArguments
                      , DerivingStrategies
                      , GeneralizedNewtypeDeriving
                      , ImportQualifiedPost
                      , InstanceSigs
                      , ScopedTypeVariables
                      , StandaloneKindSignatures
                      , TypeApplications

  if flag(systemd) && os(linux)
    cpp-options:        -DSYSTEMD

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wno-orphans
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

  if impl(ghc >= 9.8)
    ghc-options:        -Wno-x-partial

library
  import:               project-config


  hs-source-dirs:       src

  exposed-modules:      Cardano.Tracer.Acceptors.Client
                        Cardano.Tracer.Acceptors.Run
                        Cardano.Tracer.Acceptors.Server
                        Cardano.Tracer.Acceptors.Utils

                        Cardano.Tracer.Handlers.Logs.File
                        Cardano.Tracer.Handlers.Logs.Journal
                        Cardano.Tracer.Handlers.Logs.Rotator
                        Cardano.Tracer.Handlers.Logs.TraceObjects
                        Cardano.Tracer.Handlers.Logs.Utils

                        Cardano.Tracer.Handlers.Metrics.Monitoring
                        Cardano.Tracer.Handlers.Metrics.Prometheus
                        Cardano.Tracer.Handlers.Metrics.Servers
                        Cardano.Tracer.Handlers.Metrics.TimeseriesServer
                        Cardano.Tracer.Handlers.Metrics.Utils

                        Cardano.Tracer.Handlers.Notifications.Check
                        Cardano.Tracer.Handlers.Notifications.Email
                        Cardano.Tracer.Handlers.Notifications.Send
                        Cardano.Tracer.Handlers.Notifications.Settings
                        Cardano.Tracer.Handlers.Notifications.Types
                        Cardano.Tracer.Handlers.Notifications.Utils

                        Cardano.Tracer.Handlers.ReForwarder
                        Cardano.Tracer.Handlers.State.TraceObjects
                        Cardano.Tracer.Handlers.System
                        Cardano.Tracer.Handlers.Utils

                        Cardano.Tracer.CLI
                        Cardano.Tracer.Configuration
                        Cardano.Tracer.Environment
                        Cardano.Tracer.MetaTrace
                        Cardano.Tracer.Run
                        Cardano.Tracer.Types
                        Cardano.Tracer.Utils

  other-modules:        Cardano.Tracer.Handlers.Logs.Journal.NoSystemd
                        Cardano.Tracer.Handlers.Notifications.Timer
                        Cardano.Tracer.Time

                        Paths_cardano_tracer

  autogen-modules:      Paths_cardano_tracer

  if flag(systemd) && os(linux)
    build-depends:      libsystemd-journal >= 1.4.4
                      , unordered-containers
    other-modules:      Cardano.Tracer.Handlers.Logs.Journal.Systemd

  build-depends:        aeson >= 2.1.0.0
                      , async
                      , auto-update
                      , bimap
                      , blaze-html
                      , bytestring
                      , cardano-diffusion ^>= 1.0
                      , cborg ^>= 0.2.4
                      , containers
                      , contra-tracer
                      , directory
                      , ekg-core
                      , ekg-forward >= 1.2
                      , ekg-wai
                      , extra
                      , filepath
                      , http-types
                      , mime-mail
                      , network
                      , network-mux >= 0.8
                      , optparse-applicative
                      , ouroboros-network:{api, framework} ^>= 1.1
                      , signal
                      , slugify
                      , smtp-mail ^>= 0.5
                      , stm <2.5.2 || >=2.5.3
                      , text
                      , time
                      , trace-dispatcher ^>= 2.13.0
                      , trace-forward ^>= 2.4.0
                      , trace-resources ^>= 0.2.4
                      , vector
                      , wai ^>= 3.2
                      , warp ^>= 3.4
                      , warp-tls
                      , yaml
                      , cardano-timeseries-io

  if os(windows)
    build-depends:    Win32
  else
    build-depends:    unix

executable cardano-tracer
  import:               project-config

  hs-source-dirs:       app

  main-is:              cardano-tracer.hs

  other-modules:        Paths_cardano_tracer
  autogen-modules:      Paths_cardano_tracer

  default-extensions:   BlockArguments
                      , ScopedTypeVariables

  build-depends:        cardano-tracer
                      , optparse-applicative

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-T

library demo-forwarder-lib
  import:               project-config

  hs-source-dirs:       test

  other-modules:        Cardano.Tracer.Test.Utils

  exposed-modules:      Cardano.Tracer.Test.Forwarder
                        Cardano.Tracer.Test.TestSetup

  build-depends:        aeson
                      , async
                      , bytestring
                      , cardano-tracer
                      , cborg
                      , contra-tracer
                      , deepseq
                      , directory
                      , ekg-core
                      , ekg-forward
                      , extra
                      , filepath
                      , generic-data
                      , network
                      , network-mux
                      , optparse-applicative
                      , ouroboros-network:{api, framework}
                      , tasty-quickcheck
                      , text
                      , time
                      , trace-dispatcher
                      , trace-forward
                      , vector
                      , vector-algorithms
                      , QuickCheck


executable demo-forwarder
  import:               project-config

  hs-source-dirs:       demo/ssh

  main-is:              forwarder.hs

  build-depends:        demo-forwarder-lib
                      , trace-dispatcher

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-T
  if os(windows)
    buildable:          False

library demo-acceptor-lib
  import:               project-config

  hs-source-dirs:       test

  other-modules:        Cardano.Tracer.Test.TestSetup
                        Cardano.Tracer.Test.Utils

  exposed-modules:      Cardano.Tracer.Test.Acceptor

  build-depends:        bytestring
                      , cardano-tracer
                      , containers
                      , extra
                      , filepath
                      , generic-data
                      , optparse-applicative
                      , ouroboros-network:api
                      , stm <2.5.2 || >=2.5.3
                      , tasty-quickcheck
                      , text
                      , trace-dispatcher
                      , trace-forward
                      , vector
                      , vector-algorithms
                      , QuickCheck

executable demo-acceptor
  import:               project-config

  hs-source-dirs:       demo

  main-is:              acceptor.hs

  build-depends:        demo-acceptor-lib

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-T
  if os(windows)
    buildable:          False

test-suite cardano-tracer-test
  import:               project-config
  type:                 exitcode-stdio-1.0
  default-extensions:   OverloadedStrings

  if os(windows)
    buildable:          False

  hs-source-dirs:       test

  main-is:              cardano-tracer-test.hs

  other-modules:        Cardano.Tracer.Test.Forwarder
                        Cardano.Tracer.Test.DataPoint.Tests
                        Cardano.Tracer.Test.Logs.Tests
                        Cardano.Tracer.Test.Restart.Tests
                        Cardano.Tracer.Test.TestSetup
                        Cardano.Tracer.Test.Utils
                        Cardano.Tracer.Test.Queue.Tests
  build-depends:        aeson
                      , async
                      , bytestring
                      , cardano-tracer
                      , cborg
                      , containers
                      , contra-tracer
                      , deepseq
                      , directory
                      , ekg-core
                      , ekg-forward
                      , extra
                      , filepath
                      , generic-data
                      , network
                      , network-mux
                      , optparse-applicative
                      , ouroboros-network:{api, framework}
                      , stm <2.5.2 || >=2.5.3
                      , tasty
                      , tasty-quickcheck
                      , text
                      , time
                      , trace-dispatcher
                      , trace-forward
                      , unix-compat
                      , vector
                      , vector-algorithms
                      , QuickCheck

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N

test-suite cardano-tracer-test-ext
  import:               project-config
  type:                 exitcode-stdio-1.0
  default-extensions:   OverloadedStrings

  hs-source-dirs:       test

  main-is:              cardano-tracer-test-ext.hs

  other-modules:        Cardano.Tracer.Test.Forwarder
                        Cardano.Tracer.Test.TestSetup
                        Cardano.Tracer.Test.Utils
                        Cardano.Tracer.Test.ForwardingStressTest.Script
                        Cardano.Tracer.Test.ForwardingStressTest.Config
                        Cardano.Tracer.Test.ForwardingStressTest.Messages
                        Cardano.Tracer.Test.ForwardingStressTest.Types

  build-tool-depends:   cardano-tracer:cardano-tracer

  -- Sadly, this does not work on Windows (Path vs. PATH?):
  -- *** Failed! Exception: 'cardano-tracer: spawnProcess: failed (Success)' (after 1 test):
  if os(windows)
    buildable:          False

  build-depends:        aeson
                      , async
                      , bytestring
                      , cardano-diffusion
                      , cardano-tracer
                      , cborg
                      , containers
                      , contra-tracer
                      , deepseq
                      , directory
                      , ekg-core
                      , ekg-forward
                      , extra
                      , filepath
                      , generic-data
                      , Glob
                      , network
                      , network-mux
                      , optparse-applicative
                      , ouroboros-network:{api, framework}
                      , process
                      , QuickCheck
                      , tasty
                      , tasty-quickcheck
                      , text
                      , time
                      , trace-dispatcher
                      , trace-forward
                      , unix-compat
                      , vector
                      , vector-algorithms

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N

benchmark cardano-tracer-bench
  import:               project-config
  type:                 exitcode-stdio-1.0

  hs-source-dirs:       bench

  main-is:              cardano-tracer-bench.hs

  build-depends:        cardano-tracer
                      , criterion
                      , directory
                      , deepseq
                      , extra
                      , filepath
                      , time
                      , trace-dispatcher

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N
