name:                  cardano-tx-generator
version:               1.7.0
description:           The transaction generator for cardano node
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md, ChangeLog.md

library

  hs-source-dirs:      src

  exposed-modules:     Cardano.Tx.Generator
                       Cardano.Tx.Generator.Error
                       Cardano.Tx.Generator.NodeToNode
                       Cardano.Tx.Generator.Tx
                       Cardano.Tx.Generator.TxSubmission

  other-modules:       Paths_cardano_tx_generator

  build-depends:       aeson
                     , async
                     , base >=4.12 && <5
                     , bytestring
                     , cardano-config
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-prelude
                     , contra-tracer
                     , cborg >= 0.2.2 && < 0.3
                     , containers
                     , directory
                     , filepath
                     , formatting
                     , http-client
                     , http-types
                     , io-sim-classes
                     , iohk-monitoring
                     , iproute
                     , network
                     , network-mux
                     , optparse-applicative
                     , ouroboros-consensus
                     , ouroboros-consensus-byron
                     , ouroboros-consensus-cardano
                     , ouroboros-network
                     , ouroboros-network-framework
                     , safe-exceptions
                     , serialise
                     , stm
                     , text
                     , time
                     , tracer-transformers
                     , transformers
                     , transformers-except
                     , unordered-containers
                     , yaml

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

  ghc-options:         -Weverything
                       -Wno-implicit-prelude
                       -fno-warn-safe
                       -fno-warn-unsafe
                       -fno-warn-missing-import-lists
                       -Wno-unticked-promoted-constructors
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wcompat

executable cardano-tx-generator
  hs-source-dirs:      app
  main-is:             cardano-tx-generator.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -rtsopts
                       "-with-rtsopts=-T"
  build-depends:       base >=4.12 && <5
                     , cardano-prelude
                     , cardano-tx-generator
                     , optparse-applicative
                     , transformers-except

  default-extensions:  NoImplicitPrelude

test-suite cardano-tx-generator-test
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0

  build-depends:        base >=4.12 && <5
                      , cardano-prelude

  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude

  ghc-options:          -Weverything
                        -fno-warn-missing-import-lists
                        -fno-warn-safe
                        -fno-warn-unsafe
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
