cabal-version:       3.0
name:                ekg-forward
version:             1.2
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/input-output-hk/ekg-forward
bug-reports:         https://github.com/input-output-hk/ekg-forward/issues
license:             Apache-2.0
license-file:        LICENSE
copyright:           2021-2023 Input Output Global Inc (IOG), 2023-2026 Intersect.
author:              IOHK
maintainer:          operations@iohk.io
category:            System, Network
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/input-output-hk/ekg-forward.git

common common-options
  build-depends:       base >=4.12 && <5

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -fhide-source-paths

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src

  exposed-modules:     System.Metrics.Acceptor
                       System.Metrics.Configuration
                       System.Metrics.Forwarder
                       System.Metrics.ReqResp

                       System.Metrics.Network.Acceptor
                       System.Metrics.Network.Forwarder

                       System.Metrics.Store.Acceptor
                       System.Metrics.Store.Forwarder

                       System.Metrics.Protocol.Type
                       System.Metrics.Protocol.Codec
                       System.Metrics.Protocol.Acceptor
                       System.Metrics.Protocol.Forwarder

  other-modules:       System.Metrics.Store.Deltify

  build-depends:         async
                       , bytestring
                       , cborg
                       , contra-tracer
                       , ekg-core
                       , io-classes >= 1.4.1
                       , network
                       , network-mux
                       , ouroboros-network:{api, framework} ^>= 1.1
                       , singletons ^>= 3.0
                       , serialise
                       , stm
                       , text
                       , time
                       , typed-protocols:{typed-protocols, cborg} ^>= 1.2
                       , unordered-containers

executable demo-forwarder
  hs-source-dirs:      demo
  main-is:             forwarder.hs
  build-depends:         base
                       , contra-tracer
                       , ekg-core
                       , ekg-forward
                       , text
                       , time

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-T

executable demo-acceptor
  hs-source-dirs:      demo
  main-is:             acceptor.hs
  build-depends:         base
                       , contra-tracer
                       , ekg-core
                       , ekg-forward
                       , stm
                       , text
                       , time

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-T

test-suite ekg-forward-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.GetAllMetrics
                       Test.GetMetrics
                       Test.GetUpdatedMetrics
                       Test.MkConfig
  build-depends:         base
                       , contra-tracer
                       , ekg-core
                       , ekg-forward
                       , hspec
                       , stm
                       , time
                       , unordered-containers
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  default-extensions:  OverloadedStrings
