cabal-version: 2.4

name:                   hedgehog-extras
version:                0.1.0.0
description:            The cardano full node
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple

library
  hs-source-dirs:       src
  build-depends:        base >= 4.12 && < 5
                      , aeson                           >= 1.5.5.1
                      , async                           >= 2.2.2
                      , bytestring                      >= 0.10.10.0
                      , deepseq                         >= 1.4.4.0
                      , directory                       >= 1.3.6.0
                      , exceptions                      >= 0.10.4
                      , filepath                        >= 1.4.2.1
                      , hedgehog                        >= 1.0.4
                      , mmorph                          >= 1.1.3
                      , mtl                             >= 2.2.2
                      , network                         >= 3.1.2.1
                      , process                         >= 1.6.9.0
                      , random                          >= 1.1
                      , resourcet                       >= 1.2.4.2
                      , stm                             >= 2.5.0.0
                      , temporary                       >= 1.3
                      , text                            >= 1.2.3.2
                      , time                            >= 1.9.3
                      , transformers                    >= 0.5.6.2
                      , unliftio                        >= 0.2.13.1
                      , unordered-containers            >= 0.2.13.0
                      , Win32-network                   >= 0.1.0.0

  exposed-modules:      Hedgehog.Extras.Internal.Cli
                        Hedgehog.Extras.Internal.Plan
                        Hedgehog.Extras.Internal.Test.Integration
                        Hedgehog.Extras.Stock.Aeson
                        Hedgehog.Extras.Stock.CallStack
                        Hedgehog.Extras.Stock.IO.File
                        Hedgehog.Extras.Stock.IO.Network.NamedPipe
                        Hedgehog.Extras.Stock.IO.Network.Socket
                        Hedgehog.Extras.Stock.IO.Network.Sprocket
                        Hedgehog.Extras.Stock.IO.Process
                        Hedgehog.Extras.Stock.Monad
                        Hedgehog.Extras.Stock.OS
                        Hedgehog.Extras.Stock.String
                        Hedgehog.Extras.Stock.Time
                        Hedgehog.Extras.Test.Base
                        Hedgehog.Extras.Test.Concurrent
                        Hedgehog.Extras.Test.File
                        Hedgehog.Extras.Test.MonadAssertion
                        Hedgehog.Extras.Test.Network
                        Hedgehog.Extras.Test.Process
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Wcompat
