cabal-version: 2.4

name:                   hedgehog-extras
version:                0.1.0.0
description:            The cardano full node
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple

common base                         { build-depends: base                             >= 4.14       && < 4.15     }

common maybe-Win32-network
  if os(windows)
     build-depends:     Win32-network

common project-config
  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints

  if impl(ghc >= 8.10)
    ghc-options:        -Wunused-packages

library
  import:               base, project-config
                      , maybe-Win32-network
  hs-source-dirs:       src
  build-depends:        aeson             >= 1.5.6.0
                      , aeson-pretty      >= 0.8.5
                      , async
                      , bytestring
                      , deepseq
                      , directory
                      , exceptions
                      , filepath
                      , hedgehog
                      , mmorph
                      , mtl
                      , network
                      , filepath
                      , process
                      , resourcet
                      , stm
                      , temporary
                      , text
                      , time
                      , transformers
                      , unliftio
                      , unordered-containers
  exposed-modules:      Hedgehog.Extras.Aeson
                        Hedgehog.Extras.Internal.Cli
                        Hedgehog.Extras.Internal.Plan
                        Hedgehog.Extras.Internal.Test.Integration
                        Hedgehog.Extras.Stock.Aeson
                        Hedgehog.Extras.Stock.CallStack
                        Hedgehog.Extras.Stock.IO.File
                        Hedgehog.Extras.Stock.IO.Network.NamedPipe
                        Hedgehog.Extras.Stock.IO.Network.Socket
                        Hedgehog.Extras.Stock.IO.Network.Sprocket
                        Hedgehog.Extras.Stock.IO.Process
                        Hedgehog.Extras.Stock.Monad
                        Hedgehog.Extras.Stock.OS
                        Hedgehog.Extras.Stock.String
                        Hedgehog.Extras.Stock.Time
                        Hedgehog.Extras.Test.Base
                        Hedgehog.Extras.Test.Concurrent
                        Hedgehog.Extras.Test.File
                        Hedgehog.Extras.Test.MonadAssertion
                        Hedgehog.Extras.Test.Network
                        Hedgehog.Extras.Test.Process
