cabal-version:      3.0
name:               test-cputicks-darwin
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             Michael Karg
maintainer:         michael.karg@iohk.io
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-type-defaults

executable test-cputicks-darwin
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:      base >=4.18
                      , random
                      , trace-resources
    ghc-options:      -O1
                      -threaded
                      "-with-rtsopts=-T"
    hs-source-dirs:   app
    default-language: Haskell2010
